Add SCM attributes to all plugins pom
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@25975 bab10101-e421-0410-a517-8ce0973de3ef

--- a/pom.xml
+++ b/pom.xml
@@ -36,4 +36,10 @@
 		<jiraProjectName>PLUGINWIZARD</jiraProjectName>
 		<jiraComponentId>10146</jiraComponentId>
 	</properties>
+
+    <scm>
+        <connection>scm:svn:http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical</connection>
+        <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical</developerConnection>
+        <url>http://dev.lutece.paris.fr/viewvc/portal/trunk/plugins/technical</url>
+    </scm>
 </project>
