PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46158 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -9,6 +9,7 @@ pagePathLabel=Source code generator wizard
 #pluginwizard_create_plugin.html
 pluginwizard_create_plugin.pageTitle=Create a plugin
 pluginwizard_create_plugin.labelPluginName=Create a plugin
+pluginwizard_create_plugin.labelPluginNameHelp=Low caps and characters included in [a..z]
 pluginwizard_create_plugin.helpPluginName=The name of the plugin
 pluginwizard_create_plugin.buttonCreatePlugin=Continue
 pluginwizard_create_plugin.labelAddBusinessClasses=Business layer classes
@@ -503,31 +504,31 @@ pluginwizard_modify_business_class.pageHelp=The business class is made up a name
 pluginwizard_create_plugin.labelCreationStep=Create
 pluginwizard_create_plugin.labelDescriptionStep=Describe
 pluginwizard_create_plugin.labelFeaturesStep=Features
-pluginwizard_create_plugin.labelBusinessStep=M\u00E9tier
+pluginwizard_create_plugin.labelBusinessStep=M\u00e9tier
 pluginwizard_create_plugin.labelXPageStep=XPage
 pluginwizard_create_plugin.labelPortletsStep=Portlets
 pluginwizard_create_plugin.labelI18n=i18n
-pluginwizard_create_plugin.labelGenerateStep=G\u00E9n\u00E9ration
+pluginwizard_create_plugin.labelGenerateStep=G\u00e9n\u00e9ration
 
 ###############################################################################
 #Steps
 pluginwizard_modify_pluginlabelCreationStep=Create
 pluginwizard_modify_pluginlabelDescriptionStep=Describe
 pluginwizard_modify_pluginlabelFeaturesStep=Features
-pluginwizard_modify_pluginlabelBusinessStep=M\u00E9tier
+pluginwizard_modify_pluginlabelBusinessStep=M\u00e9tier
 pluginwizard_modify_pluginlabelXPageStep=XPage
 pluginwizard_modify_pluginlabelPortletsStep=Portlets
 pluginwizard_modify_pluginlabelI18n=i18n
-pluginwizard_modify_pluginlabelGenerateStep=G\u00E9n\u00E9ration
+pluginwizard_modify_pluginlabelGenerateStep=G\u00e9n\u00e9ration
 
 pluginwizard_create_plugin_application.labelCreationStep=Create
 pluginwizard_create_plugin_application.labelDescriptionStep=Describe
 pluginwizard_create_plugin_application.labelFeaturesStep=Features
-pluginwizard_create_plugin_application.labelBusinessStep=M\u00E9tier
+pluginwizard_create_plugin_application.labelBusinessStep=M\u00e9tier
 pluginwizard_create_plugin_application.labelXPageStep=XPage
 pluginwizard_create_plugin_application.labelPortletsStep=Portlets
 pluginwizard_create_plugin_application.labelI18n=i18n
-pluginwizard_create_plugin_application.labelGenerateStep=G\u00E9n\u00E9ration
+pluginwizard_create_plugin_application.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_create_plugin_application.pageHelp=The creation of an XPage needs a label to identify the portlet and also the Java class that concretely builds the interface. The use cases will depend on the parameters passed to the request during form submission.
 
 
