--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>plugin-pluginwizard</artifactId>
     <packaging>lutece-plugin</packaging>
     <version>2.0.0-SNAPSHOT</version>
-    <name>Lutece Plugin wizard plugin</name>
+    <name>Lutece plugin wizard plugin</name>
 
     <repositories>
         <repository>
@@ -35,6 +35,7 @@
         <componentName>pluginwizard</componentName>
         <jiraProjectName>PLUGINWIZARD</jiraProjectName>
         <jiraComponentId>10146</jiraComponentId>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <scm>
@@ -42,4 +43,24 @@
         <developerConnection>scm:svn:https://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard</developerConnection>
         <url>http://dev.lutece.paris.fr/viewvc/lutece/portal/trunk/plugins/technical/plugin-pluginwizard</url>
     </scm>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
