--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -219,6 +219,10 @@ pluginwizard_plugin_recapitulate.labelPortlets=Portlets
 pluginwizard_plugin_recapitulate.labelAdminFeatures=Admin Features
 pluginwizard_plugin_recapitulate.labelBusinessClasses=Business Classes
 pluginwizard_plugin_recapitulate.buttonGenerate=Generate the zip
+pluginwizard_plugin_recapitulate.labelPluginName=Plugin's name
+pluginwizard_plugin_recapitulate.pageHelp=The plugin is ready to be generated. A summary of its content is displayed.The button 'Generate the zip' allows creating the archive. The button 'Go Back' will point towards the previous steps in order if ever modifications were needed.
+pluginwizard_plugin_recapitulate.alertProperties=<h4>Caution ! </h4>before first run, you have to finalize text resources in different languages.<br>Files are located in /src/java/fr/paris/lutece/plugins/<i>myplugin</i>/resources/.
+
 
 
 
@@ -609,16 +613,6 @@ pluginwizard_manage_resource_keys.labelXPageStep=XPage
 pluginwizard_manage_resource_keys.labelPortletsStep=Portlets
 pluginwizard_manage_resource_keys.labelI18n=i18n
 pluginwizard_manage_resource_keys.labelGenerateStep=Download
-
-pluginwizard_plugin_recapitulate.labelCreationStep=Create
-pluginwizard_plugin_recapitulate.labelDescriptionStep=Describe
-pluginwizard_plugin_recapitulate.labelFeaturesStep=Features
-pluginwizard_plugin_recapitulate.labelBusinessStep=Business
-pluginwizard_plugin_recapitulate.labelXPageStep=XPage
-pluginwizard_plugin_recapitulate.labelPortletsStep=Portlets
-pluginwizard_plugin_recapitulate.labelI18n=i18n
-pluginwizard_plugin_recapitulate.labelGenerateStep=Download
-pluginwizard_plugin_recapitulate.pageHelp=The plugin is ready to be generated. A summary of its content is displayed.The button 'Generate the zip' allows creating the archive. The button 'Go Back' will point towards the previous steps in order if ever modifications were needed.
 
 
 #######################Configuration Back Office
