PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46207 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -1,9 +1,13 @@
-plugin.description=Wizard for Lutece business Java objects
+plugin.description=Wizard to generate plugins for Lutece
 plugin.provider=City of Paris
 
 ################################################################################
-pageTitle=Source code generator wizard
-pagePathLabel=Source code generator wizard
+pageTitle=Wizard to generate plugins for Lutece
+pagePathLabel=Plugin generation wizard
+
+####################### Back Office features
+adminFeature.pluginwizard_management.name=PluginWizard Management
+adminFeature.pluginwizard_management.description=Manage PluginWizard configuration
 
 ###############################################################################
 #pluginwizard_create_plugin.html
@@ -11,6 +15,7 @@ pluginwizard_create_plugin.pageTitle=Create a plugin
 pluginwizard_create_plugin.labelPluginName=Create a plugin
 pluginwizard_create_plugin.labelPluginNameHelp=Low caps and characters included in [a..z]
 pluginwizard_create_plugin.helpPluginName=The name of the plugin
+pluginwizard_create_plugin.labelSummary=The wizard will generate the following components
 pluginwizard_create_plugin.buttonCreatePlugin=Continue
 pluginwizard_create_plugin.labelAddBusinessClasses=Business layer classes
 pluginwizard_create_plugin.labelAddSqlFiles=The SQL init files
@@ -54,6 +59,7 @@ pluginwizard_modify_plugin.pageTitle=Modify a plugin
 pluginwizard_modify_plugin.labelPluginName=Modify a plugin
 pluginwizard_modify_plugin.helpPluginName=The name of the plugin
 pluginwizard_modify_plugin.buttonModifyPlugin=Modify
+pluginwizard_modify_plugin.labelSummary=The wizard will generate the following components
 pluginwizard_modify_plugin.labelAddBusinessClasses=Business layer classes
 pluginwizard_modify_plugin.labelAddSqlFiles=The SQL init files
 pluginwizard_modify_plugin.labelAddJspBean=The Java classes for presentation layer
