PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46222 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -33,6 +33,14 @@ pluginwizard_create_plugin_description.labelFalse=False
 pluginwizard_create_plugin.labelStepOf=Step of
 pluginwizard_create_plugin.labelInformation=Information
 pluginwizard_create_plugin.create_plugin.pageHelp=The assistant allows to generate a Lutece plugin. This plugin can easily be customized to satisfy your specific needs. As described above there are seven steps. At each step, important details must be provided. At the end of these steps, pluginwizard will create a zip containing all the useful configuration files.<li>The name of the plugin must be in small letters minuscule (ex. sun, cart, etc.. ). The checkboxes allows the choice of the type of files which must be included. If nothing is checked, all files will be produced.</li><li>The "Validate" button  points the next step of the wizard which concerns the description of the plugin.</li> 
+
+###############################################################################
+#pluginwizard_plugin_exists.html
+pluginwizard_plugin_exists.alert=<h4>Caution !</h4><br/><br/>There is generation data for this plugin's name
+pluginwizard_plugin_exists.buttonPreserve=Preserve data
+pluginwizard_plugin_exists.buttonReset=Reset data
+
+
 ###############################################################################
 #pluginwizard_create_attribute.html
 pluginwizard_create_attribute.pageTitle=Create an attribute
