PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46260 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -119,9 +119,14 @@ pluginwizard_create_admin_feature.labelFeatureManagement=Feature Management
 pluginwizard_create_admin_feature.labelFeatureDescription=Feature Description
 pluginwizard_create_admin_feature.labelFeatureLevel=Feature Level
 pluginwizard_create_admin_feature.labelFeatureTitle=Feature Title
-pluginwizard_create_admin_feature.labelFeatureUrl=Feature Url
+pluginwizard_create_admin_feature.labelFeatureName=Technical name
 pluginwizard_create_admin_feature.buttonCreateFeature=Create a feature
 pluginwizard_create_admin_feature.pageHelp=The feature management is always in capital and ends with '_MANAGEMENT'. The title and the description are freemarker keys which will be replaced at runtime in order to implement i18n. The values of all the keys are placed in language files which follows the following pattern. A generic set of French and English pattern will be generated. The Feature level defines  a perimeter in which a group of backoffice users can access.The feature url point the image which represents your plugin. It must be placed after unzipping the generated zip.
+pluginwizard_create_admin_feature.labelLevel0=Level 0 - Right for the technical admin
+pluginwizard_create_admin_feature.labelLevel1=Level 1 - Right for operational admin
+pluginwizard_create_admin_feature.labelLevel2=Level 2 - Right for webmaster 
+pluginwizard_create_admin_feature.labelLevel3=Level 3 - Right for assistant webmaster
+
 
 ###############################################################################
 #pluginwizard_create_plugin_application.html
@@ -244,21 +249,6 @@ pluginwizard_plugin_recapitulate.alertProperties=<h4>Caution ! </h4>before first
 #pluginwizard_modify_application_feature.html
 pluginwizard_modify_application_feature.pageTitle=Modify application feature
 
-
-pluginwizard_create_admin_feature.pageTitle=Create an admin feature in the plugin
-pluginwizard_create_admin_feature.create_feature_button=Create the feature
-pluginwizard_create_admin_feature.labelFeatureManagement=Feature Management
-pluginwizard_create_admin_feature.labelFeatureDescription=Feature description
-pluginwizard_create_admin_feature.labelFeatureLevel=Feature Level
-pluginwizard_create_admin_feature.labelFeatureTitle=Feature Title
-pluginwizard_create_admin_feature.labelFeatureUrl=Feature Url
-pluginwizard_create_admin_feature.buttonBack=Back
-
-pluginwizard_create_admin_feature.labelLevel0=Level 0 - Right for the technical admin
-pluginwizard_create_admin_feature.labelLevel1=Level 1 - Right for operational admin
-pluginwizard_create_admin_feature.labelLevel2=Level 2 - Right for webmaster 
-pluginwizard_create_admin_feature.labelLevel3=Level 3 - Right for assistant webmaster
-
 pluginwizard_modify_plugin_application.labelCreationStep=Create
 pluginwizard_modify_plugin_application.labelDescriptionStep=Describe
 pluginwizard_modify_plugin_application.labelFeaturesStep=Features
@@ -277,7 +267,7 @@ pluginwizard_modify_admin_feature.labelFeatureManagement=Feature Management
 pluginwizard_modify_admin_feature.labelFeatureDescription=Feature description
 pluginwizard_modify_admin_feature.labelFeatureLevel=Feature Level
 pluginwizard_modify_admin_feature.labelFeatureTitle=Feature Title
-pluginwizard_modify_admin_feature.labelFeatureUrl=Feature Url
+pluginwizard_modify_admin_feature.labelFeatureName=Technical name
 pluginwizard_modify_admin_feature.modify_feature_button=Modify the feature
 pluginwizard_modify_admin_feature.buttonBack=Back
 pluginwizard_modify_admin_feature.labelLevel0=Level 0 - Right for the technical admin
@@ -296,33 +286,6 @@ pluginwizard_modify_admin_feature.labelGenerateStep=Download
 
 pluginwizard_modify_admin_feature.pageHelp=The feature management is always in capital and ends with '_MANAGEMENT'. The title and the description are freemarker keys which will be replaced at runtime in order to implement i18n. The values of all the keys are placed in language files which follows the following pattern. A generic set of French and English pattern will be generated. The Feature level defines  a perimeter in which a group of backoffice users can access.The feature url point the image which represents your plugin. It must be placed after unzipping the generated zip.
 
-
-###############################################################################
-#pluginwizard_view_admin_feature.html
-
-pluginwizard_view_admin_feature.pageTitle=View admin feature
-pluginwizard_view_admin_feature.create_feature_button=Modify the feature
-pluginwizard_view_admin_feature.labelFeatureManagement=Feature Management
-pluginwizard_view_admin_feature.labelFeatureDescription=Feature description
-pluginwizard_view_admin_feature.labelFeatureLevel=Feature Level
-pluginwizard_view_admin_feature.labelFeatureTitle=Feature Title
-pluginwizard_view_admin_feature.labelFeatureUrl=Feature Url
-pluginwizard_view_admin_feature.buttonBack=Back
-pluginwizard_view_admin_feature.labelLevel0=Level 0 - Right for the technical admin
-pluginwizard_view_admin_feature.labelLevel1=Level 1 - Right for operational admin
-pluginwizard_view_admin_feature.labelLevel2=Level 3 - Right for assistant webmaster
-pluginwizard_view_admin_feature.labelLevel3=Level 3 - Right for assistant webmaster
-
-pluginwizard_view_admin_feature.labelCreationStep=Create
-pluginwizard_view_admin_feature.labelDescriptionStep=Describe
-pluginwizard_view_admin_feature.labelFeaturesStep=Features
-pluginwizard_view_admin_feature.labelBusinessStep=Business
-pluginwizard_view_admin_feature.labelXPageStep=XPage
-pluginwizard_view_admin_feature.labelPortletsStep=Portlets
-pluginwizard_view_admin_feature.labelI18n=i18n
-pluginwizard_view_admin_feature.labelGenerateStep=Download
-pluginwizard_view_admin_feature.pageHelp=The admin feature allows to declare a number of back office tasks which will be accessed by a restricted category of users. In pluginwizard, the management of business objects will be a subset of functions controlled by the admin feature. The user interface allows to add, modify and delete the admin features
-                                 
                                                              
 ###############################################################################
 #pluginwizard_manage_plugin_applications.html
@@ -564,7 +527,6 @@ pluginwizard_create_plugin_description.labelGenerateStep=Download
 #pluginwizard_manage_plugin_admin_features.html
 pluginwizard_manage_plugin_admin_features.pageTitle=Manage admin features
 pluginwizard_manage_plugin_admin_features.labelFeatureLevel=Level
-pluginwizard_manage_plugin_admin_features.labelFeatureUrl=Url
 pluginwizard_manage_plugin_admin_features.labelFeatureDescription=Description
 pluginwizard_manage_plugin_admin_features.labelFeatureTitle= Title
 pluginwizard_manage_plugin_admin_features.labelFeatureAction=Action
