--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
             <version>[4.0.0,6.0.0-SNAPSHOT)</version>
             <type>lutece-core</type>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-lgpl</artifactId>
+            <version>1.7.4</version>
+        </dependency>
+                
+                
     </dependencies>
 
     <properties>
