POM updated - dependency jackson set to 1.9.11
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@49765 bab10101-e421-0410-a517-8ce0973de3ef

--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-lgpl</artifactId>
-            <version>1.7.4</version>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.12</version>
         </dependency>
                 
                 
