PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50362 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -2,36 +2,19 @@
 # Configuration file for Wizard plugin
 
 
-################################################################################
-# Generators
+pluginwizard.label.title.manage.fr=Liste des {0}s
+pluginwizard.label.title.create.fr=Cr\u00e9ation d'un {0}
+pluginwizard.label.title.modify.fr=Modification d'un {0}
+pluginwizard.label.buttonAdd.fr=Ajouter un {0}
+pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \u00eatre vide. Veuillez le remplir SVP.
+pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} carat\u00e8res.
 
-pluginwizard.generator1.text=Classe métier
-pluginwizard.generator1.template=skin/plugins/pluginwizard/modules/boclassgen/business_class.html
-
-pluginwizard.generator2.text=Classe DAO
-pluginwizard.generator2.template=skin/plugins/pluginwizard/modules/daoclassgen/dao_class.html
-
-pluginwizard.generator3.text=Classe DAO (pour plugin)
-pluginwizard.generator3.template=skin/plugins/pluginwizard/modules/daoclassgen/dao_plugin_class.html
-
-pluginwizard.generator4.text=Classe Interface DAO
-pluginwizard.generator4.template=skin/plugins/pluginwizard/modules/interfaceDAO/interface_dao_class.html
-
-pluginwizard.generator5.text=Classe Interface DAO (pour plugin)
-pluginwizard.generator5.template=skin/plugins/pluginwizard/modules/interfaceDAO/interface_dao_plugin_class.html
-
-pluginwizard.generator6.text=Classe Home 
-pluginwizard.generator6.template=skin/plugins/pluginwizard/modules/homeclassgen/home_class.html
-
-pluginwizard.generator7.text=Classe Home (pour plugin)
-pluginwizard.generator7.template=skin/plugins/pluginwizard/modules/homeclassgen/home_class_plugin.html
-
-pluginwizard.generator8.text=Classe de test JUnit
-pluginwizard.generator8.template=skin/plugins/pluginwizard/modules/junittestclassgen/junit_test_class.html
-
-pluginwizard.generator9.text=Classe de test JUnit (pour plugin)
-pluginwizard.generator9.template=skin/plugins/pluginwizard/modules/junittestclassgen/junit_test_plugin_class.html
-
+pluginwizard.label.title.manage.en=list of {0}s
+pluginwizard.label.title.create.en=Create a {0}
+pluginwizard.label.title.modify.en=Modify a {0}
+pluginwizard.label.buttonAdd.en=Add a {0}
+pluginwizard.label.validation.notEmpty.fr=The field {0} cannot be empty. Please fill it.
+pluginwizard.label.validation.size.fr=The field {0} cannot accept more than {1} charaters.
 
 
 pluginwizard.models.files.path=/WEB-INF/templates/skin/plugins/pluginwizard/models/
