PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50418 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -473,6 +473,8 @@ pluginwizard_modify_business_class.buttonModifyAttribute=Modify attribute
 pluginwizard_modify_business_class.buttonRemoveAttribute=Delete attribute
 pluginwizard_modify_business_class.buttonModifyClass=Modify class
 
+pluginwizard_modify_business_class.labelNotNull=Mandatory
+pluginwizard_modify_business_class.labelMaxLength=Max Length
 pluginwizard_modify_business_class.labelAttributeKey=Key
 pluginwizard_modify_business_class.labelAttributeDescription=Description
 pluginwizard_modify_business_class.labelAttributeAction=Action
