PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50442 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -47,6 +47,8 @@ pluginwizard_create_attribute.labelAttributeName=Attribute Name
 pluginwizard_create_attribute.labelAttributeType=Type of the attribute
 pluginwizard_create_attribute.buttonCreateAttribute=Create Attribute
 pluginwizard_create_attribute.buttonBack=Business Class Management
+pluginwizard_create_attribute.labelMandatory=Mandatory
+pluginwizard_create_attribute.labelClassDescription=Description
 pluginwizard_create_attribute.labelAttributeKey=Key
 pluginwizard_create_attribute.pageHelp=The attributes of the Pojo class are in small letters with an underscore in between the different words representing the attribute (e.g id_person is a field which is a column in the SQL table that would be generated). The type of the attribute can be chosen in the dropdown box. The button 'Modify an attribute' allows modifying the attribute.
 
@@ -58,6 +60,8 @@ pluginwizard_modify_attribute.labelAttributeType=Type of the attribute
 pluginwizard_modify_attribute.buttonModifyAttribute=Modify Attribute
 pluginwizard_modify_attribute.buttonBack=Business Class Management
 pluginwizard_modify_attribute.labelAttributeKey=Key
+pluginwizard_modify_attribute.labelMandatory=Mandatory
+pluginwizard_modify_attribute.labelClassDescription=Description
 pluginwizard_modify_attribute.pageHelp=The attributes of the Pojo class are in small letters with an underscore in between the different words representing the attribute (e.g id_person is a field which is a column in the SQL table that would be generated). The type of the attribute can be chosen in the dropdown box. The button 'Modify an attribute' allows modifying the attribute.
 
 ###############################################################################
@@ -463,6 +467,7 @@ pluginwizard_modify_business_class.labelModifyAttribute=Modify Attribute
 pluginwizard_modify_business_class.labelDeleteAttribute=Delete Attribute
 pluginwizard_modify_business_class.labelFielsetAttributes=Attributes of the business class
 
+pluginwizard_modify_business_class.labelBusinessTableName=Name of the table
 pluginwizard_modify_business_class.labelBusinessTableName=Name of the table
 pluginwizard_modify_business_class.labelBusinessAttributes=Attributes used by the business class
 pluginwizard_modify_business_class.labelAdminFeatures=Managemement feature
