PLUGINWIZARD-40 : Building several generation scheme
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50510 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -8,14 +8,15 @@ pluginwizard.label.title.modify.fr=Modification d'un {0}
 pluginwizard.label.buttonAdd.fr=Ajouter un {0}
 pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \u00eatre vide. Veuillez le remplir SVP.
 pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} carat\u00e8res.
+pluginwizard.label.confirmRemove.fr=Etes vous sur de vouloir supprimer ce {0} ?
 
 pluginwizard.label.title.manage.en=list of {0}s
 pluginwizard.label.title.create.en=Create a {0}
 pluginwizard.label.title.modify.en=Modify a {0}
 pluginwizard.label.buttonAdd.en=Add a {0}
-pluginwizard.label.validation.notEmpty.fr=The field {0} cannot be empty. Please fill it.
-pluginwizard.label.validation.size.fr=The field {0} cannot accept more than {1} charaters.
-
+pluginwizard.label.validation.notEmpty.en=The field {0} cannot be empty. Please fill it.
+pluginwizard.label.validation.size.en=The field {0} cannot accept more than {1} charaters.
+pluginwizard.label.confirmRemove.en=Are you sure you want to delete this {0} ?
 
 pluginwizard.models.files.path=/WEB-INF/templates/skin/plugins/pluginwizard/models/
 
