PLUGINWIZARD-40 : Manage several generation schemes
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@50598 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/conf/plugins/pluginwizard.properties
+++ b/webapp/WEB-INF/conf/plugins/pluginwizard.properties
@@ -3,8 +3,8 @@
 
 
 pluginwizard.label.title.manage.fr=Liste des {0}s
-pluginwizard.label.title.create.fr=Cr\u00e9ation d'un {0}
-pluginwizard.label.title.modify.fr=Modification d'un {0}
+pluginwizard.label.title.create.fr=Cr\u00e9ation d''un {0}
+pluginwizard.label.title.modify.fr=Modification d''un {0}
 pluginwizard.label.buttonAdd.fr=Ajouter un {0}
 pluginwizard.label.validation.notEmpty.fr=Le champ {0} ne doit pas \u00eatre vide. Veuillez le remplir SVP.
 pluginwizard.label.validation.size.fr=Le champ {0} ne doit pas contenir plus de {1} carat\u00e8res.
