--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>plugin-pluginwizard</artifactId>
     <packaging>lutece-plugin</packaging>
     <version>3.0.1-SNAPSHOT</version>
-    <name>Lutece plugin wizard plugin</name>
+    <name>Lutece pluginwizard plugin</name>
 
     <repositories>
         <repository>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-mvc</artifactId>
-            <version>[0.9.0, )</version>
+            <version>[0.9.2-SNAPSHOT, )</version>
         </dependency>
     </dependencies>
 
