POM updated library-mvc version set to 0.9.2 release
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51639 bab10101-e421-0410-a517-8ce0973de3ef

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-mvc</artifactId>
-            <version>[0.9.2-SNAPSHOT, )</version>
+            <version>[0.9.2, )</version>
         </dependency>
     </dependencies>
 
