PLUGINWIZARD-53 : Fix and Improve portlet generation
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@51876 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -156,8 +156,7 @@ pluginwizard_create_portlet.pageTitle=Create a portlet in the plugin
 pluginwizard_create_portlet.pageTitle=Create a portlet 
 pluginwizard_create_portlet.labelPortletClass= Portlet Class
 pluginwizard_create_portlet.labelPortletTypeName=Portlet Type Name
-pluginwizard_create_portlet.labelCreationUrl=Creation Url
-pluginwizard_create_portlet.labelUpdateUrl=Update Url
+pluginwizard_create_portlet.labelJspBaseName=Base name for JSP
 pluginwizard_create_portlet.buttonCreatePortlet=Create Portlet
 pluginwizard_create_portlet.buttonBack=Back to Menu
 
@@ -166,8 +165,7 @@ pluginwizard_create_portlet.buttonBack=Back to Menu
 pluginwizard_modify_portlet.pageTitle=Modify a portlet
 pluginwizard_modify_portlet.labelPortletClass= Portlet Class
 pluginwizard_modify_portlet.labelPortletTypeName=Portlet Type Name
-pluginwizard_modify_portlet.labelCreationUrl=Creation Url
-pluginwizard_modify_portlet.labelUpdateUrl=Update Url
+pluginwizard_modify_portlet.labelJspBaseName=Base name for JSP
 pluginwizard_modify_portlet.buttonModifyPortlet=Modify Portlet
 pluginwizard_modify_portlet.buttonBack=Back to Menu
 pluginwizard_modify_portlet.pageHelp=The fields required to create a plugin are the portlet class,the name of the portlet which must end with '_PORTLET', the creation and the modification url which corresponds to the JSP which manages the portlet.  The button 'Modify the portlet' allows modifying the portlet.
@@ -224,8 +222,7 @@ pluginwizard_manage_portlets.buttonBack=Previous Step
 pluginwizard_manage_portlets.buttonNext=Next Step
 pluginwizard_manage_portlets.labelPortletClass=Class
 pluginwizard_manage_portlets.labelPortletTypeName=Type
-pluginwizard_manage_portlets.labelPortletCreationUrl=Creation Url
-pluginwizard_manage_portlets.labelPortletUpdateUrl=Update Url
+pluginwizard_manage_portlets.labelPortletJspBaseName=Base name for JSP
 pluginwizard_manage_portlets.labelPortletAction=Action
 
 
