--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[4.0.0,6.0.0-SNAPSHOT)</version>
+            <version>[4.1.1-SNAPSHOT,6.0.0-SNAPSHOT)</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
@@ -38,11 +38,6 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.12</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.paris.lutece.plugins</groupId>
-            <artifactId>library-mvc</artifactId>
-            <version>[1.1.1-SNAPSHOT, )</version>
         </dependency>
     </dependencies>
 
