--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[4.1.1-SNAPSHOT,6.0.0-SNAPSHOT)</version>
+            <version>[4.1.0,6.0.0-SNAPSHOT)</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
