PLUGINWIZARD-67 : Create Business Classes before AdminFeatures and XPage in order to affect them for CRUD's generation
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@53538 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -1,3 +1,5 @@
+# Wizard messages properties file
+
 plugin.description=Wizard to generate plugins for Lutece
 plugin.provider=City of Paris
 
@@ -38,7 +40,6 @@ pluginwizard_create_plugin.create_plugin.pageHelp=The assistant allows to genera
 pluginwizard_plugin_exists.alert=<h4>Caution !</h4><br/><br/>There is generation data for this plugin's name
 pluginwizard_plugin_exists.buttonPreserve=Preserve data
 pluginwizard_plugin_exists.buttonReset=Reset data
-
 
 ###############################################################################
 #pluginwizard_create_attribute.html
@@ -85,7 +86,6 @@ pluginwizard_modify_plugin.labelAddXPage=The XPage classes
 pluginwizard_modify_plugin.labelInformation=Information
 pluginwizard_modify_plugin.pageHelp=The creation of the module is done in 8 steps.The Creation of the plugin is the first step.The validation button points towards the next steps in order to add details on the plugin. The files which will be generated can be chosen by the checkboxes on the left.
 
-
 ###############################################################################
 #pluginwizard.html
 pluginwizard.pageTitle=Source code generator wizard
@@ -102,7 +102,6 @@ pluginwizard.generate_button=Generate
 #wizard_create_admin_feature.html
 pluginwizard_create_admin_feature.pageTitle=Create an admin feature
 
-
 ###############################################################################
 #pluginwizard_create_application_feature.html
 pluginwizard_create_application_feature.pageTitle=Create an application feature
@@ -111,7 +110,9 @@ pluginwizard_create_application_feature.pageTitle=Create an application feature
 #pluginwizard_modify_portlet.html
 pluginwizard_create_modify_portlet.pageTitle=Modify the portlet of the plugin
 
-
+###############################################################################
+#pluginwizard_create_plugin.html
+pluginwizard_create_plugin.pageTitle=Create a plugin
 
 ###############################################################################
 #pluginwizard_create_admin_feature.html
@@ -128,24 +129,26 @@ pluginwizard_create_admin_feature.labelLevel0=Level 0 - Right for the technical 
 pluginwizard_create_admin_feature.labelLevel1=Level 1 - Right for operational admin
 pluginwizard_create_admin_feature.labelLevel2=Level 2 - Right for webmaster 
 pluginwizard_create_admin_feature.labelLevel3=Level 3 - Right for assistant webmaster
-
+pluginwizard_create_admin_feature.labelBusinessClass=Business Classes
+pluginwizard_create_admin_feature.buttonBack=Back
 
 ###############################################################################
 #pluginwizard_create_application.html
+pluginwizard_create_application.labelBusinessClass=Business Classes
 pluginwizard_create_application.pageTitle=Create an XPage
 pluginwizard_create_application.labelApplicationName=Name of the application
 pluginwizard_create_application.labelApplicationClass=The name of the application
 pluginwizard_create_application.buttonCreateApplication=Create the XPage
 pluginwizard_create_application.buttonBack=Back to Menu
+
 ###############################################################################
 #pluginwizard_modify_application.html
+pluginwizard_modify_application.labelBusinessClass=Business Classes
 pluginwizard_modify_application.pageTitle=Modify an XPage
 pluginwizard_modify_application.labelApplicationName=XPage name
 pluginwizard_modify_application.labelApplicationClass=XPage class
 pluginwizard_modify_application.buttonModifyApplication=Modify the XPage
 pluginwizard_modify_application.buttonBack=Back to Menu
-
-
 
 ###############################################################################
 #pluginwizard_create_portlet.html
@@ -170,7 +173,6 @@ pluginwizard_modify_portlet.buttonModifyPortlet=Modify Portlet
 pluginwizard_modify_portlet.buttonBack=Back to Menu
 pluginwizard_modify_portlet.pageHelp=The fields required to create a plugin are the portlet class,the name of the portlet which must end with '_PORTLET', the creation and the modification url which corresponds to the JSP which manages the portlet.  The button 'Modify the portlet' allows modifying the portlet.
 
-
 ###############################################################################
 #pluginwizard_manage_resource_keys.html
 pluginwizard_manage_resource_keys.pageTitle=Manage the resource keys
@@ -184,7 +186,6 @@ pluginwizard_manage_resource_keys.labelItemsPerPage=Items per page
 pluginwizard_manage_resource_keys.columnTitleIdentifier=Identifier
 pluginwizard_manage_resource_keys.columnTitleEnglish=English
 pluginwizard_manage_resource_keys.columnTitleFrench=French
-
 
 ###############################################################################
 #pluginwizard_manage_business_classes.html
