PLUGINWIZARD-78 : Initial work for REST Generation : The plugin generate REST architecture for all the business classes checked in the rest step.
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@64949 bab10101-e421-0410-a517-8ce0973de3ef

--- a/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/pluginwizard/resources/pluginwizard_messages.properties
@@ -235,6 +235,8 @@ pluginwizard_plugin_recapitulate.buttonBack=Go Back
 pluginwizard_plugin_recapitulate.labelSummary=Plugin Attributes
 pluginwizard_plugin_recapitulate.labelXPages=XPages
 pluginwizard_plugin_recapitulate.labelPortlets=Portlets
+pluginwizard_plugin_recapitulate.labelRests=Associate to REST
+pluginwizard_plugin_recapitulate.labelRest=Associates to REST
 pluginwizard_plugin_recapitulate.labelAdminFeatures=Admin Features
 pluginwizard_plugin_recapitulate.labelBusinessClasses=Business Classes
 pluginwizard_plugin_recapitulate.buttonGenerate=Generate the zip
@@ -300,6 +302,15 @@ pluginwizard_modify_application.pageTitle=Modify the Xpage
 ###############################################################################
 #pluginwizard_modify_portlet_feature.html
 pluginwizard_modify_portlet_feature.pageTitle=Modify portlet feature
+
+###############################################################################
+#pluginwizard_manage_plugin_rest.html
+
+pluginwizard_manage_plugin_rest.pageTitle=Manage Business classes used REST
+pluginwizard_manage_plugin_rest.labelBusinessClass=Business classes
+pluginwizard_manage_plugin_rest.buttonBack=Previous Step
+pluginwizard_manage_plugin_rest.buttonNext=Next Step
+pluginwizard_manage_plugin_rest.pageHelp=REST is a web services architecture which allows to exchange web data.
 
 ###############################################################################
 #pluginwizard_create_plugin_description.html
@@ -488,7 +499,7 @@ pluginwizard_modify_business_class.pageHelp=The business class is made up a name
 pluginwizard_create_plugin.labelCreationStep=Create
 pluginwizard_create_plugin.labelDescriptionStep=Describe
 pluginwizard_create_plugin.labelFeaturesStep=Features
-pluginwizard_create_plugin.labelBusinessStep=M\u00e9tier
+pluginwizard_create_plugin.labelBusinessStep=Business Class
 pluginwizard_create_plugin.labelXPageStep=XPage
 pluginwizard_create_plugin.labelPortletsStep=Portlets
 pluginwizard_create_plugin.labelI18n=i18n
@@ -499,7 +510,7 @@ pluginwizard_create_plugin.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_modify_pluginlabelCreationStep=Create
 pluginwizard_modify_pluginlabelDescriptionStep=Describe
 pluginwizard_modify_pluginlabelFeaturesStep=Features
-pluginwizard_modify_pluginlabelBusinessStep=M\u00e9tier
+pluginwizard_modify_pluginlabelBusinessStep=Business Class
 pluginwizard_modify_pluginlabelXPageStep=XPage
 pluginwizard_modify_pluginlabelPortletsStep=Portlets
 pluginwizard_modify_pluginlabelI18n=i18n
@@ -508,9 +519,10 @@ pluginwizard_modify_pluginlabelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_create_application.labelCreationStep=Create
 pluginwizard_create_application.labelDescriptionStep=Describe
 pluginwizard_create_application.labelFeaturesStep=Features
-pluginwizard_create_application.labelBusinessStep=M\u00e9tier
+pluginwizard_create_application.labelBusinessStep=Business Class
 pluginwizard_create_application.labelXPageStep=XPage
 pluginwizard_create_application.labelPortletsStep=Portlets
+pluginwizard_create_application.labelRestStep=REST
 pluginwizard_create_application.labelI18n=i18n
 pluginwizard_create_application.labelGenerateStep=G\u00e9n\u00e9ration
 pluginwizard_create_application.pageHelp=The creation of an XPage needs a label to identify the portlet and also the Java class that concretely builds the interface. The use cases will depend on the parameters passed to the request during form submission.
