--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,18 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>plugin-pluginwizard</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>3.3.2-SNAPSHOT</version>
+    <version>4.0.0-SNAPSHOT</version>
     <name>Lutece pluginwizard plugin</name>
 
     <repositories>
+        <repository>
+            <id>luteceSnapshot</id>
+            <name>luteceSnapshot</name>
+            <url>http://dev.lutece.paris.fr/snapshot_repository</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
         <repository>
             <id>lutece</id>
             <name>luteceRepository</name>
@@ -26,7 +34,7 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[4.1.0,6.0.0-SNAPSHOT)</version>
+            <version>[4.9.9,)</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
